--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
 .App {
   text-align: center;
+  border: 2px solid black;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -14,7 +20,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #282c3488;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -23,6 +29,18 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.App-body {
+  background-color: #b7e7db;
+  min-height: 66vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
 
 .App-link {
   color: #61dafb;
